--- a/.gitignore
+++ b/.gitignore
@@ -406,3 +406,27 @@ ASALocalRun/
 AnimalCrossingTests/obj/Debug/netcoreapp3.0/AnimalCrossingTests.csprojAssemblyReference.cache
 AnimalCrossingApi/obj/Debug/netcoreapp3.0/AnimalCrossingApi.csprojAssemblyReference.cache
 .vs/AnimalCrossing/xs/project-cache/AnimalCrossing-Debug.json
+.vs/AnimalCrossing/xs/sqlite3/storage.ide
+AnimalCrossingApi/obj/AnimalCrossingApi.csproj.nuget.cache
+AnimalCrossingApi/obj/AnimalCrossingApi.csproj.nuget.dgspec.json
+AnimalCrossingApi/obj/AnimalCrossingApi.csproj.nuget.g.props
+AnimalCrossingApi/obj/project.assets.json
+AnimalCrossingTests/obj/AnimalCrossingTests.csproj.nuget.cache
+AnimalCrossingTests/obj/AnimalCrossingTests.csproj.nuget.dgspec.json
+AnimalCrossingTests/obj/AnimalCrossingTests.csproj.nuget.g.props
+AnimalCrossingTests/obj/project.assets.json
+.vs/AnimalCrossing/xs/project-cache/AnimalCrossing-Debug.json
+.vs/AnimalCrossing/xs/project-cache/AnimalCrossingApi-Debug.json
+.vs/AnimalCrossing/xs/project-cache/AnimalCrossingTests-Debug.json
+AnimalCrossingApi/obj/AnimalCrossingApi.csproj.nuget.cache
+AnimalCrossingApi/obj/AnimalCrossingApi.csproj.nuget.dgspec.json
+AnimalCrossingApi/obj/AnimalCrossingApi.csproj.nuget.g.props
+AnimalCrossingApi/obj/Debug/netcoreapp3.0/AnimalCrossingApi.assets.cache
+AnimalCrossingApi/obj/Debug/netcoreapp3.0/AnimalCrossingApi.csprojAssemblyReference.cache
+AnimalCrossingApi/obj/project.assets.json
+AnimalCrossingTests/obj/AnimalCrossingTests.csproj.nuget.cache
+AnimalCrossingTests/obj/AnimalCrossingTests.csproj.nuget.dgspec.json
+AnimalCrossingTests/obj/AnimalCrossingTests.csproj.nuget.g.props
+AnimalCrossingTests/obj/Debug/netcoreapp3.0/AnimalCrossingTests.assets.cache
+AnimalCrossingTests/obj/Debug/netcoreapp3.0/AnimalCrossingTests.csprojAssemblyReference.cache
+AnimalCrossingTests/obj/project.assets.json
