--- a/AnimalCrossingApi/appsettings.json
+++ b/AnimalCrossingApi/appsettings.json
@@ -6,9 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AnimalCrossingContextApi": "Server=(localdb)\\mssqllocaldb;Database=AnimalCrossingContextApi-4abba62e-6f88-4608-8fd7-d0e7281f27b4;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "AnimalCrossingContxtApi2": "Server=(localdb)\\mssqllocaldb;Database=AnimalCrossingContxtApi2-e9396f41-9423-42ab-bb7a-f9d76f63a0fc;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
